feat(projects-service): remove member stamps